Lisätty ResponseEntityihin jotka voi olla montaa eri tyyppiä wildcard <?> ja muita pikkukorjauksia resourceihin.